// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordWidget > renders a password view widget component 1`] = `
<span
  className="metadata password widget"
>
  ********
</span>
`;

exports[`PasswordWidget > renders a password view widget component with children 1`] = `
<span
  className="metadata password widget"
>
  <strong>
    ********
  </strong>
</span>
`;

exports[`PasswordWidget > renders an empty password view widget component 1`] = `null`;
